organizacao das referencias

--- a/documents/sbc-template.bib
+++ b/documents/sbc-template.bib
@@ -1,30 +1,3 @@
-@Book{knuth:84,
-  author = 	 {Donald E. Knuth},
-  title = 	 {The {\TeX} Book},
-  publisher = 	 {Addison-Wesley},
-  year = 	 {1984},
-  edition = 	 {15th}
-}
-
-@InCollection{boulic:91,
-  author = 	 {R. Boulic and O. Renault},
-  title = 	 {3D Hierarchies for Animation},
-  booktitle = 	 {New Trends in Animation and Visualization},
-  publisher =    {John Wiley {\&} Sons ltd.},
-  year = 	 {1991},
-  editor = 	 {Nadia Magnenat-Thalmann and Daniel Thalmann}
-}
-
-@InCollection{smith:99,
-  author = 	 {A. Smith and B. Jones},
-  title = 	 {On the Complexity of Computing},
-  booktitle = 	 {Advances in Computer Science},
-  pages = 	 {555--566},
-  publisher =    {Publishing Press},
-  year = 	 {1999},
-  editor = 	 {A. B. Smith-Jones}
-}
-
 @article{erdogmus:05,
   author = 	 {Hakan Erdogmus, Maurizio Morisio, Marco. Torchiano},
   title = 	 {On the effectiveness of test--first approach to programming},
@@ -41,3 +14,35 @@
   year =		{2007},
   edition =	{2nd}
 }
+
+@misc{website:teamcity,
+	author = {JetBrains s.r.o.},
+	title = {Continous Integration for Everybody},
+	year = {2000-2014},
+	url = {http://www.jetbrains.com/teamcity/}
+}
+
+@misc{website:git,
+	title = {Free and open source distributed version control system},
+	year = {2014},
+	url = {http://git-scm.com/}
+}
+
+@misc{website:jenkins,
+	title = {An extendable open source continuous integration server},
+	year = {2014},
+	url = {https://code.google.com/p/googletest/}
+}
+
+@misc{website:gerrit,
+	title = {Web based code review and project management for Git based projects},
+	year = {2010 - 2014},
+	url = {https://code.google.com/p/gerrit/}
+}
+
+@misc{website:gtest,
+	title = {Google C++ Testing Framework},
+	year = {2014},
+	url = {https://code.google.com/p/googletest/}
+}
+
