--- a/documents/sbc-template.tex
+++ b/documents/sbc-template.tex
@@ -47,17 +47,18 @@
 \section{Introdução}
 
 Com a popularização dos métodos ágeis. difundiu--se e muito o desenvolvimento
-orientado a testes (\textit{Test Driven Development}), onde há uma busca constante
-em eliminar falhas de programação durante a codificação, com foco principalmente em 
-design, pois produzir um código testável implica em baixo acoplamento, além da acréscimo
-de qualidade sobre produto de software.\\
-Além dos testes unitários, há também a revisão de código, que integrado a um sistema testes 
-automatizados e um sistema de controle de versão obtem-se uma metodologia de trabalho eficaz e
-que traz velocidade e segurança no desenvolvimento de sistemas, principalmente em C/C++ em que
-há uma gama enorme de plataformas e arquiteturas para esta linguagem.\\
-Este artigo apresentará uma proposta de workflow para desenvolvimento em C/C++ baseado em TDD, 
-utilizando \textit{pre-tested commits}, sendo possível expandí-lo a outras linguagens de 
-programação.
+orientado a testes (\textit{Test Driven Development}), onde há uma busca 
+constante em eliminar falhas de programação durante a codificação, com foco 
+principalmente em design, pois produzir um código testável implica em baixo 
+acoplamento, além da acréscimo de qualidade sobre produto de software.\\
+Além dos testes unitários, há também a revisão de código, que integrado a um 
+sistema testes automatizados e um sistema de controle de versão obtem-se uma 
+metodologia de trabalho eficaz e que traz velocidade e segurança no 
+desenvolvimento de sistemas, principalmente em C/C++ em que há uma gama enorme 
+de plataformas e arquiteturas para esta linguagem.\\
+Este artigo apresentará uma proposta de workflow para desenvolvimento em C/C++ 
+baseado em TDD, utilizando \textit{pre-tested commits}, sendo possível 
+expandí-lo a outras linguagens de programação.
 
 \section {Fundamentação Teórica}
 
@@ -276,8 +277,8 @@ Outra técnica útil é utilizar um checklist para a revisão de código, por exemplo
 	\item 
 		É possível aplicar melhorias ou refatoração para melhorar o código ?
 \end{itemize}
-Além disso, é possível utilizar ferramentas de análise de código, como por exemplo, 
-o \cite{webpage:gerrit}, que integradas ao sistema de 
+Além disso, é possível utilizar ferramentas de análise de código, como por 
+exemplo, o \cite{webpage:gerrit}, que integradas ao sistema de 
 controle de versão executam revisões em grupo do tipo
 \textit{post--commit}, isto é, o código recém enviado ao repositório sofre uma 
 análise de um grupo de desenvolvedores, que aprovam ou não o código, 
@@ -285,17 +286,20 @@ indicando melhorias e alterações.
 
 \subsection{Pre-Tested Commits}
 
-A proposta do \textit{pre-tested commit}, é dedicar um \textit{repositório primário} 
-ligado ao servidor de Integração Contínua para que execute os testes unitários e de 
-integração, antes de ir para o repositório principal. \\
-Isto é necessário porque normalmente desenvolvedores não executam testes após a conclusão 
-de uma tarefa, enviando para o repositório uma possível falha.
-Este tipo de ação é justificada para um sistema muito complexo, com \textit{n} testes de 
-integração, e que demandam muito tempo, até horas para completar todo o processo de testes.\\
-Obviamente. é mandatório que o desenvolvedor execute seus testes unitários, mas há também, 
-uma possibilidade que seus testes não cubram uma falha gerada acidentalmente em outra parte 
-do sistema. 
-Portanto, para que não ocorra quebra do repositório principal o \textit{pre-tested commit} é utilizado.\\
+A proposta do \textit{pre-tested commit}, é dedicar um 
+\textit{repositório primário} ligado ao servidor de Integração Contínua para 
+que execute os testes unitários e de integração, antes de ir para o 
+repositório principal.\\
+Isto é necessário porque normalmente desenvolvedores não executam testes após 
+a conclusão de uma tarefa, enviando para o repositório uma possível falha.
+Este tipo de ação é justificada para um sistema muito complexo, com 
+\textit{n} testes de integração, e que demandam muito tempo, até horas para 
+completar todo o processo de testes.\\
+Obviamente. é mandatório que o desenvolvedor execute seus testes unitários, 
+mas há também, uma possibilidade que seus testes não cubram uma falha gerada 
+acidentalmente em outra parte do sistema. 
+Portanto, para que não ocorra quebra do repositório principal o 
+\textit{pre-tested commit} é utilizado.\\
 A utilização dele está fortemente ligado ao sistema de controle de versão, 
 como o \cite{website:teamcity} ou a um conjunto 
 de ferramentas configuradas para tal função, como por exemplo a utilização do 
